// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the LmsTable renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    lmsSubmissions={Object {}}
    loading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="lms-table"
>
          <Table>
                    <TableHeader
                              headers={
                                        Array [
                                                  "Course Id",
                                                  "Output Name",
                                                  "Due Date",
                                                  "Submission Date",
                                                  "Review Date",
                                                  "Score",
                                                ]
                              }
                    />
          </Table>
</div>,
        <Loader />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Table>
            <TableHeader
                        headers={
                                    Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Score",
                                              ]
                        }
            />
</Table>,
          "className": "lms-table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <TableHeader
                headers={
                                Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Score",
                                              ]
                }
/>,
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "headers": Array [
                  "Course Id",
                  "Output Name",
                  "Due Date",
                  "Submission Date",
                  "Review Date",
                  "Score",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            undefined,
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="lms-table"
>
            <Table>
                        <TableHeader
                                    headers={
                                                Array [
                                                            "Course Id",
                                                            "Output Name",
                                                            "Due Date",
                                                            "Submission Date",
                                                            "Review Date",
                                                            "Score",
                                                          ]
                                    }
                        />
            </Table>
</div>,
          <Loader />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Table>
              <TableHeader
                            headers={
                                          Array [
                                                        "Course Id",
                                                        "Output Name",
                                                        "Due Date",
                                                        "Submission Date",
                                                        "Review Date",
                                                        "Score",
                                                      ]
                            }
              />
</Table>,
            "className": "lms-table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <TableHeader
                  headers={
                                    Array [
                                                      "Course Id",
                                                      "Output Name",
                                                      "Due Date",
                                                      "Submission Date",
                                                      "Review Date",
                                                      "Score",
                                                    ]
                  }
/>,
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "headers": Array [
                    "Course Id",
                    "Output Name",
                    "Due Date",
                    "Submission Date",
                    "Review Date",
                    "Score",
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              undefined,
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the LmsTable renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    lmsSubmissions={
        Object {
            "data": Array [],
          }
    }
    loading={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "customStyle": Object {},
      "message": "There's currently no LMS data for this fellow",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "customStyle": Object {},
        "message": "There's currently no LMS data for this fellow",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the LmsTable renders correctly 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    lmsSubmissions={
        Object {
            "data": Object {
              "outputs": Object {},
            },
          }
    }
    loading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="lms-table"
>
          <Table>
                    <TableHeader
                              headers={
                                        Array [
                                                  "Course Id",
                                                  "Output Name",
                                                  "Due Date",
                                                  "Submission Date",
                                                  "Review Date",
                                                  "Score",
                                                ]
                              }
                    />
          </Table>
</div>,
        <Loader />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Table>
            <TableHeader
                        headers={
                                    Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Score",
                                              ]
                        }
            />
</Table>,
          "className": "lms-table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <TableHeader
                headers={
                                Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Score",
                                              ]
                }
/>,
              Array [],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "headers": Array [
                  "Course Id",
                  "Output Name",
                  "Due Date",
                  "Submission Date",
                  "Review Date",
                  "Score",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="lms-table"
>
            <Table>
                        <TableHeader
                                    headers={
                                                Array [
                                                            "Course Id",
                                                            "Output Name",
                                                            "Due Date",
                                                            "Submission Date",
                                                            "Review Date",
                                                            "Score",
                                                          ]
                                    }
                        />
            </Table>
</div>,
          <Loader />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Table>
              <TableHeader
                            headers={
                                          Array [
                                                        "Course Id",
                                                        "Output Name",
                                                        "Due Date",
                                                        "Submission Date",
                                                        "Review Date",
                                                        "Score",
                                                      ]
                            }
              />
</Table>,
            "className": "lms-table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <TableHeader
                  headers={
                                    Array [
                                                      "Course Id",
                                                      "Output Name",
                                                      "Due Date",
                                                      "Submission Date",
                                                      "Review Date",
                                                      "Score",
                                                    ]
                  }
/>,
                Array [],
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "headers": Array [
                    "Course Id",
                    "Output Name",
                    "Due Date",
                    "Submission Date",
                    "Review Date",
                    "Score",
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
